[package]
name = "addon"
version = "0.1.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
image = { version="0.23", optional=true}
base64 = { version="0.13", optional=true}
maud = "0.22"

[features]
default = []
debugging = ["image", "base64"]

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "RequestInit",
    "Response",
    "Headers",
    "Url",
    "Blob",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "HtmlDocument",
    "HtmlCollection",
    "Location",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbDatabase",
    "IdbTransaction",
    "IdbObjectStore",
    "CssStyleDeclaration",
    "NodeList",
    "DomTokenList",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "CssStyleDeclaration",
]